--- a/examples/example_any.conf
+++ b/examples/example_any.conf
@@ -1,5 +1,3 @@
-{ class = "thread" },
-
 // write key
 { class = "emitter", request = {
 	request = {
@@ -46,8 +44,9 @@
 	}
 }},
 
-{ class = "kill" },
-NULL,
+{ class = "end" }
+
+{ class = "end" },
 {
 	name       = "memcache",
 	class      = "modules/memcache",
