--- a/examples/example_same_restrict.conf
+++ b/examples/example_same_restrict.conf
@@ -1,5 +1,3 @@
-{ class = "thread" },
-
 // write key
 { class = "emitter", request = {
 	request = {
@@ -62,9 +60,9 @@
 		{ class = "end" }
 	}
 }},
+{ class = "end" }
 
-{ class = "kill" },
-NULL,
+{ class = "end" },
 {
 	name       = "memcache",
 	class      = "modules/memcache",
