Fix missing lib dep

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -219,7 +219,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 modules_LTLIBRARIES = module_c_memcache.la
 module_c_memcache_la_CFLAGS = -I@includedir@/frozen/ -DFROZEN_MODULE
-module_c_memcache_la_LDFLAGS = -module -avoid-version -shared -lmemcached
+module_c_memcache_la_LDFLAGS = -module -avoid-version -shared -lmemcached -lfrozen
 module_c_memcache_la_SOURCES = main_memcache.c
 EXTRA_DIST = errors_list.c
 all: all-am
